# ping_receiver

./: CMakeLists.txt  README.md  do_build.bat  setup.bat
sources/: Pinger.cpp  Pinger.hpp  main.cpp
